fix: change footer and header align for big screens

--- a/style/style.scss
+++ b/style/style.scss
@@ -102,7 +102,7 @@ a {
   position: sticky;
   top: 0px;
   padding: 10px;
-  justify-content: space-between;
+  justify-content: center;
   height: 85px;
 }
 
@@ -114,6 +114,7 @@ a {
 .footer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   max-height: 60px;
 }
 
